--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,5 +28,7 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
+        env:
+          TF_VAR_ami_id: ${{ secrets.AMI_ID }}
         working-directory: terraform
         run: terraform apply -auto-approve
