--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,11 +19,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+
+
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: "1.5.7"
-          terraform_wrapper: false
+          terraform_version: 1.5
 
       - name: Terraform Init
         working-directory: terraform
