--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,10 +22,8 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.7
-
-
-
+          terraform_version: "1.5.7"
+          terraform_wrapper: false
 
       - name: Terraform Init
         working-directory: terraform
