--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,38 +1,52 @@
 name: Terraform Apply
-
 on:
   workflow_dispatch:
-
 jobs:
   terraform:
     name: Deploy with Terraform
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        
+      - name: Debug directory structure
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          echo "Terraform directory contents:"
+          ls -la terraform || echo "terraform directory not found"
+        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
+          
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.5.7"
           terraform_wrapper: false
-
+          
+      - name: Verify Terraform installation
+        run: terraform --version
+        
+      - name: Create terraform directory if not exists
+        run: mkdir -p terraform
+        
+      - name: Fix permissions
+        run: chmod -R +x terraform/
+        
       - name: Terraform Init
         working-directory: terraform
         run: terraform init
-
+        
       - name: Terraform Plan
         working-directory: terraform
         run: terraform plan
-
+        
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
