--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,14 +9,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      - name: Debug directory structure
+      - name: Debug environment
         run: |
           echo "Current directory: $(pwd)"
+          echo "PATH: $PATH"
           echo "Directory contents:"
           ls -la
-          echo "Terraform directory contents:"
-          ls -la terraform || echo "terraform directory not found"
-        
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -24,31 +23,38 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: "1.5.7"
-          terraform_wrapper: false
+      - name: Install Terraform manually
+        run: |
+          sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+          sudo apt-get update && sudo apt-get install -y terraform=1.5.7
+          terraform --version
           
-      - name: Verify Terraform installation
-        run: terraform --version
-        
-      - name: Create terraform directory if not exists
-        run: mkdir -p terraform
-        
-      - name: Fix permissions
-        run: chmod -R +x terraform/
-        
+      - name: Check if terraform directory exists
+        run: |
+          if [ -d "terraform" ]; then
+            echo "Terraform directory exists"
+            ls -la terraform/
+          else
+            echo "Terraform directory does not exist"
+            echo "Repository contents:"
+            ls -la
+          fi
+          
       - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
+        run: |
+          cd terraform || (echo "Creating terraform directory" && mkdir -p terraform && cd terraform)
+          terraform init
         
       - name: Terraform Plan
-        working-directory: terraform
-        run: terraform plan
+        run: |
+          cd terraform
+          terraform plan
         
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
-        working-directory: terraform
-        run: terraform apply -auto-approve
+        run: |
+          cd terraform
+          terraform apply -auto-approve
