--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,9 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Update PATH
+        run: echo "$HOME/.local/bin:/usr/local/bin:/usr/bin" >> $GITHUB_PATH
         
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
