--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,9 +11,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-
+      - name: Install Terraform directly
+        run: |
+          wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+          sudo apt update && sudo apt install terraform
+          echo "Terraform location: $(which terraform)"
+          terraform --version
+          
       - name: Update PATH
         run: echo "$HOME/.local/bin:/usr/local/bin:/usr/bin" >> $GITHUB_PATH
         
@@ -25,12 +30,18 @@ jobs:
           aws-region: us-east-1
       
         
-      - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
+      - name: Run Terraform Init
+        shell: bash
+        run: |
+          export PATH=$PATH:/usr/local/bin:/usr/bin
+          which terraform
+          cd terraform
+          /usr/bin/terraform init
+        
       - name: Terraform Plan
         working-directory: terraform
         run: terraform plan
+        
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
