--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   terraform:
     name: Deploy with Terraform
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     
     
     steps:
