--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,10 +17,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.7
+      - name: Install Terraform
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y terraform
+          terraform --version
         
       - name: Terraform Init
         working-directory: terraform
