--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,39 +1,30 @@
-name: Terraform Setup Test
-
+name: Terraform Apply
 on:
   workflow_dispatch:
-
 jobs:
-  setup-terraform:
+  terraform:
+    name: Deploy with Terraform
     runs-on: ubuntu-latest
-
+    environment: aws
+    
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.7  
-
-      - name: Verify Terraform installation
-        run: terraform -version
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
-      - name: Initialize Terraform
-        run: terraform init
-        working-directory: terraform  
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init
       - name: Terraform Plan
         working-directory: terraform
         run: terraform plan
-        
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
