--- a/.github/workflows/terraform_new.yml
+++ b/.github/workflows/terraform_new.yml
@@ -39,5 +39,7 @@ jobs:
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
+          TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         working-directory: terraform
         run: terraform apply -var "ami_id=${{ secrets.AMI_ID }}" --auto-approve
