--- a/.github/workflows/terraform_new.yml
+++ b/.github/workflows/terraform_new.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          submodules: false
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -34,12 +32,14 @@ jobs:
 
       - name: Terraform Plan
         working-directory: terraform
+        env:
+          TF_VAR_ami_id: ${{ secrets.AMI_ID }}
+          TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform plan -var "ami_id=${{ secrets.AMI_ID }}"
         
       - name: Terraform Apply
         env:
           TF_VAR_ami_id: ${{ secrets.AMI_ID }}
-          TF_VAR_aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         working-directory: terraform
         run: terraform apply -var "ami_id=${{ secrets.AMI_ID }}" --auto-approve
