--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ HOST=0.0.0.0
 PORT=1337
  
 # Secrets
-APP_KEYS=m+BNUPQNorfh0ZKjo83Brw==,Uc+mMOXkM6yrNn9KRXkNmw==,t9C4v42N7ZZZLmUXL8zx6g==,TNwnE8AoW+gKCN8zFE4Bxg==
+APP_KEYS=myKeyA,myKeyB
 API_TOKEN_SALT=TKldQgMRQ9x6VmBXp87NMA==
 ADMIN_JWT_SECRET=X5X/KjIvhP7R3iVzEb5TzQ==
 TRANSFER_TOKEN_SALT=QbRDTsD9KVKIN166E5Y8zA==
